# transcription

./: .gitignore  README.md  pyproject.toml
src/: app.py
src/libs/: transcription.py
